--- a/style2.css
+++ b/style2.css
@@ -34,10 +34,20 @@ body{
 }
 
 .rightside input{
+    width: 100%;
     border: 1px solid gray;
     border-radius: 5px;
     padding: 8px;
     font-size: 14px;
     outline: 0;
+
+}
+
+.error{
+    font-size: 13px;
+    background-color: rgba(255, 0, 0, 0.753);
+    color: white;
+    padding: 4px;
+    border-radius: 5px;
 
 }
